<resources>
    <string name="app_name">Calculator</string>
    <string name="error_div_by_zero">Error cannot divide by zero</string>
    <string name="initial_value_displayed">0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
